# vamb

./: .README_.md.swp  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_Taxometer.md  __init__.py  benchmark.ipynb  benchmark.py  changelog.txt  cluster.ipynb  cluster.py  computerome_calc_tnfs_almeida.sh  computerome_mmseq_search.sh  computerome_semisupervised_mmseq_genus.sh  computerome_semisupervised_mmseq_genus_almeida.sh  computerome_semisupervised_mmseq_genus_binning.sh  computerome_semisupervised_mmseq_genus_svae.sh  computerome_semisupervised_mmseq_hloss.sh  computerome_semisupervised_mmseq_hloss_concat.sh  computerome_semisupervised_mmseq_hloss_inds.sh  computerome_semisupervised_mmseq_hloss_jointtrain.sh  computerome_semisupervised_mmseq_hloss_labels.sh  computerome_semisupervised_mmseq_hloss_longread.sh  computerome_semisupervised_mmseq_hloss_walktrap.sh  computerome_semisupervised_vamb.sh  computerome_test_knud.sh  createbins.py  encode.ipynb  encode.py  environment.yml  filtercontigs.ipynb  filtercontigs.py  findpeak.ipynb  mergeclusters.ipynb  mergeclusters.py  (+31 more)
.github/: ISSUE_TEMPLATE.md
aamb/: aamb_encode.py
benchmark/: Project.toml  benchmarks.csv  make_plots.jl
cmd/: filtercontigs.py  run.py  runcluster.py  runencode.py  runparsebam.py  runparsecontigs.py
doc/: 1: Importing Vamb, TNF and depths.ipynb  2: Autoencoding.ipynb  3: Clustering and postprocessing.ipynb  4: Benchmarking.ipynb  CAMI2.md  Future improvements.ipynb  Getting started.md  README.md  Troubleshooting.md  conf.py  front_page.md  histogram.npz  how_to_run.md  index.rst  inputs_outputs.md  installation.md  outputs.md  tips.md  tutorial.html  tutorial.ipynb  tutorial.md
src/: _vambtools.c  _vambtools.pyx  abundance.py  benchmark.ipynb  benchmark.py  build_vambtools.py  build_vambtools_c.py  cluster.ipynb  cmd_benchmark.py  concatenate.py  create_cluster_scores_bin_path_dict.py  create_fasta.py  create_kernel.py  encode.ipynb  filtercontigs.ipynb  findpeak.ipynb  gpu_clustering.py  manual_drep_JN.py  merge_aemb.py  mergeclusters.ipynb  mergeclusters.py  mv_bins_from_mdrep_clusters.py  parsebam.ipynb  parsecontigs.ipynb  rip_bins.py  run.ipynb  runvamb.ipynb  taxobench.py  threshold.ipynb  torch_cluster.py  update_cluster_scores_dict_after_ripping.py  vambtools.ipynb
test/: benchmark.py  ci.py  cluster.py  encode.py  parsebam.py  parsecontigs.py  results.py  runtests.py  test_aamb_encode.py  test_benchmark.py  test_cluster.py  test_encode.py  test_mmseqs.py  test_parsebam.py  test_parsecontigs.py  test_parsemarkers.py  test_reclustering.py  test_results.py  test_semisupervised_encode.py  test_vambtools.py  testtools.py  vambtools.py
test/data/: bad.bam  (+13 more)
tutorials/: 1 - Getting started.ipynb  2 - Importing Vamb, TNF and depths.ipynb  2 - TNF and depths.ipynb  3 - Autoencoding.ipynb  4 - Clustering and posprocessing.ipynb  5 - Benchmarking.ipynb
vamb/: __init__.py  __main__.py  aae.py  aamb_encode.py  aamb_encode_asy.py  benchmark.py  changelog.txt  cluster.py  concatenate.py  encode.py  encode_n2v.py  encode_n2v_asimetric.py  git_commit.ipynb  git_commit.py  h_loss.py  hier.py  hloss_misc.py  hlosses_fast.py  infer.py  kernel.npz  mmseqs_wrapper.py  parsebam.py  parsecontigs.py  parsemarkers.py  reclustering.py  run.py  semisupervised_encode.py  taxonomy.py  taxvamb_easy.py  taxvamb_encode.py  threshold.py  vambtools.py
workflow/: README.md  config.json  contigs.txt  environment.yml  samples2data.txt  vamb.snake.conda.py  vamb.snakefile
workflow_PlasMAAG/: README.md  pyproject.toml  requirements.txt  snakefile.smk  tree.md
workflow_PlasMAAG/config/: config.yaml
workflow_PlasMAAG/envs/: PlasMAAG.yaml  genomad.yaml  node2vec.yaml  spades_env.yaml
workflow_PlasMAAG/files_used_in_snakemake_workflow/: embeddings_to_neighs.py  merge_circular_plamb_clusters.py  process_gfa.py  write_candidate_bins.py
workflow_PlasMAAG/src/workflow_PlasMAAG/: __main__.py  command_line_runners.py  environment.py  richclick_options.py
workflow_PlasMAAG/src/workflow_PlasMAAG.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
workflow_avamb/: README.md  avamb.snake.conda.py  avamb.snake.conda.smk  avamb_no_mapping.snake.conda.py  avamb_test.snake.conda.py  avamb_test_.snake.conda.py  config.json  config_no_mapping.json  miniforge  workflow_vamb_dereplication
workflow_avamb_nomapping/: README.md  avamb.snake.conda.py  avamb_2.snake.conda.py  config.json  snakejob.run_avamb.7.sh.e38399612  snakejob.run_avamb.7.sh.e38399613  snakejob.run_checkm2_per_sample_all_bins.10.sh.e38399607  snakejob.run_checkm2_per_sample_all_bins.10.sh.o38399607  snakejob.run_checkm2_per_sample_all_bins.11.sh.e38399610  snakejob.run_checkm2_per_sample_all_bins.12.sh.e38399611  snakejob.run_checkm2_per_sample_all_bins.13.sh.e38399608  snakejob.run_checkm2_per_sample_all_bins.13.sh.o38399608  snakejob.run_checkm2_per_sample_all_bins.16.sh.e38399609  snakejob.run_checkm2_per_sample_all_bins.17.sh.e38399605  snakejob.run_checkm2_per_sample_all_bins.9.sh.e38399606
workflow_plamb/: .gitignore  README.md  pyproject.toml  snakefile.py  snakefile.smk
workflow_plamb/config/: config.yaml
workflow_plamb/envs/: checkm2.yml  genomad.yaml  install_scapp.yaml  node2vec.yaml  pipeline_conda.yaml  strobe_env.yaml
workflow_plamb/files_used_in_snakemake_workflow/: circularisation.py  classify_bins_with_geNomad.py  classify_bins_with_geNomad_strict_circular.py  concatenate.py  fastnode2vec_args.py  git_commit.py  merge_assembly_alignment_graphs.py  process_blastout.py
workflow_plamb/src/workflow_plamb/: __main__.py  click_file_types.py  command_line_runners.py  environment.py  richclick_options.py
workflow_taxVamb/: README.md  config.json  (+1 more)
(+124 files in other folders)
