# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
dynamic = ["version"]
name = "vamb"
dependencies = [
    "numpy == 1.26.4",
    "torch == 2.3.1",
    "pycoverm == 0.6.0",
    "networkx == 3.2", # 3.3 drops Python 3.9 support
    "scikit-learn == 1.5.0",
    "dadaptation == 3.2",
    "loguru == 0.7.2",
    "pyhmmer == 0.10.12",
    "pyrodigal == 3.4.1",
]
# Currently pycoverm does not have binaries for Python > 3.12.
# The dependency resolver, will not error on Python 3.13, but attempt
# to build pycoverm from source, but will not get the deps required for that.
requires-python = "<3.13,>=3.9.0"
scripts = {vamb = "vamb.__main__:main"}

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx-book-theme",
  "myst-nb",
  "ipywidgets",
  "sphinx-new-tab-link!=0.2.2",
]

[metadata]
authors = [
  {name = "Jakob Nybo Nissen", email = "jakobnybonissen@gmail.com"},
  {name = "Pau Piera", email = "pau.piera@cpr.ku.dk"},
  {name = "Simon Rasmussen", email = "simon.rasmussen@cpr.ku.dk"},
]
description = "Variational and Adversarial autoencoders for Metagenomic Binning"
license = "MIT"
readme = {file = "README.md"}
url = "https://github.com/RasmussenLab/vamb"

[build-system]
requires = [
    "setuptools ~= 70.1",
    "setuptools-scm >= 8.0",
    "Cython ~= 3.0.1"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.ignore = [
    "E722", # Use bare except.
    "E402", # import not at top - needed for the hack in __init__.py
]

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.setuptools_scm]
