[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow_PlasMAAG"
version = "0.0.1"
description = ""

readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
PlasMAAG = "workflow_PlasMAAG.__main__:main"
